--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1> Hello Coursera! Test Changes in Page</h1>
+<h1>Hello Coursera! Test Update</h1>
 </body>
 </html>>
